Archive2/eb/92fd04e809a82f/output
main.cpp: In function 'int main()':
main.cpp:20:5: error: static assertion failed: 3
     static_assert( is_vector<other_vector_2<int>>::value, "3" );
     ^
